// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResolveActions with confirmation step renders 1`] = `
<ResolveActions
  confirmLabel="Resolve"
  confirmMessage="Are you sure???"
  hasRelease={false}
  isAutoResolved={false}
  isResolved={false}
  onUpdate={[Function]}
  orgId="org-1"
  projectId="proj-1"
  shouldConfirm={true}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <customResolutionModal
      onCanceled={[Function]}
      onSelected={[Function]}
      orgId="org-1"
      projectId="proj-1"
      show={false}
    >
      <Modal
        animation={false}
        autoFocus={true}
        backdrop={true}
        bsClass="modal"
        dialogComponentClass={[Function]}
        enforceFocus={true}
        keyboard={true}
        manager={
          ModalManager {
            "containers": Array [],
            "data": Array [],
            "handleContainerOverflow": true,
            "hideSiblingNodes": true,
            "modals": Array [],
          }
        }
        onHide={[Function]}
        renderBackdrop={[Function]}
        restoreFocus={true}
        show={false}
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropClassName="modal-backdrop"
          backdropTransitionTimeout={150}
          containerClassName="modal-open"
          dialogTransitionTimeout={300}
          enforceFocus={true}
          keyboard={true}
          manager={
            ModalManager {
              "containers": Array [],
              "data": Array [],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "modals": Array [],
            }
          }
          onEntering={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          renderBackdrop={[Function]}
          restoreFocus={true}
          show={false}
        />
      </Modal>
    </customResolutionModal>
    <div
      className="btn-group"
    >
      <ActionLink
        className="btn btn-default btn-sm"
        confirmLabel="Resolve"
        disabled={false}
        message="Are you sure???"
        onAction={[Function]}
        shouldConfirm={true}
        title="Resolve"
      >
        <Confirm
          cancelText="Cancel"
          confirmText="Resolve"
          message="Are you sure???"
          onConfirm={[Function]}
          priority="primary"
        >
          <a
            className="btn btn-default btn-sm"
            onClick={[Function]}
            title="Resolve"
          >
             
            <span
              className="icon-checkmark"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            />
            Resolve
            <Modal
              animation={false}
              autoFocus={true}
              backdrop={true}
              bsClass="modal"
              dialogComponentClass={[Function]}
              enforceFocus={true}
              keyboard={true}
              manager={
                ModalManager {
                  "containers": Array [],
                  "data": Array [],
                  "handleContainerOverflow": true,
                  "hideSiblingNodes": true,
                  "modals": Array [],
                }
              }
              onHide={[Function]}
              renderBackdrop={[Function]}
              restoreFocus={true}
              show={false}
            >
              <Modal
                autoFocus={true}
                backdrop={true}
                backdropClassName="modal-backdrop"
                backdropTransitionTimeout={150}
                containerClassName="modal-open"
                dialogTransitionTimeout={300}
                enforceFocus={true}
                keyboard={true}
                manager={
                  ModalManager {
                    "containers": Array [],
                    "data": Array [],
                    "handleContainerOverflow": true,
                    "hideSiblingNodes": true,
                    "modals": Array [],
                  }
                }
                onEntering={[Function]}
                onExited={[Function]}
                onHide={[Function]}
                renderBackdrop={[Function]}
                restoreFocus={true}
                show={false}
              />
            </Modal>
          </a>
        </Confirm>
      </ActionLink>
      <DropdownLink
        alwaysRenderMenu={true}
        anchorRight={false}
        caret={true}
        className="btn btn-default btn-sm"
        disabled={false}
        keepMenuOpen={false}
        title=""
      >
        <span
          className="dropdown"
        >
          <a
            className="dropdown-actor btn btn-default btn-sm dropdown-toggle"
            onClick={[Function]}
          >
            <span
              className="dropdown-actor-title"
            >
              <span />
              <i
                className="icon-arrow-down"
              />
            </span>
          </a>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <MenuItem
              header={true}
            >
              <li
                className="dropdown-header"
                href={null}
                role="presentation"
                title={null}
              >
                Resolved In
              </li>
            </MenuItem>
            <MenuItem
              noAnchor={true}
            >
              <li
                className=""
                href={null}
                role="presentation"
                title={null}
              >
                <ActionLink
                  className="tip"
                  confirmLabel="Resolve"
                  disabled={false}
                  message="Are you sure???"
                  onAction={[Function]}
                  shouldConfirm={true}
                  title="Set up release tracking in order to use this feature."
                >
                  <Confirm
                    cancelText="Cancel"
                    confirmText="Resolve"
                    message="Are you sure???"
                    onConfirm={[Function]}
                    priority="primary"
                  >
                    <a
                      className="tip"
                      onClick={[Function]}
                      title="Set up release tracking in order to use this feature."
                    >
                       
                      The next release
                      <Modal
                        animation={false}
                        autoFocus={true}
                        backdrop={true}
                        bsClass="modal"
                        dialogComponentClass={[Function]}
                        enforceFocus={true}
                        keyboard={true}
                        manager={
                          ModalManager {
                            "containers": Array [],
                            "data": Array [],
                            "handleContainerOverflow": true,
                            "hideSiblingNodes": true,
                            "modals": Array [],
                          }
                        }
                        onHide={[Function]}
                        renderBackdrop={[Function]}
                        restoreFocus={true}
                        show={false}
                      >
                        <Modal
                          autoFocus={true}
                          backdrop={true}
                          backdropClassName="modal-backdrop"
                          backdropTransitionTimeout={150}
                          containerClassName="modal-open"
                          dialogTransitionTimeout={300}
                          enforceFocus={true}
                          keyboard={true}
                          manager={
                            ModalManager {
                              "containers": Array [],
                              "data": Array [],
                              "handleContainerOverflow": true,
                              "hideSiblingNodes": true,
                              "modals": Array [],
                            }
                          }
                          onEntering={[Function]}
                          onExited={[Function]}
                          onHide={[Function]}
                          renderBackdrop={[Function]}
                          restoreFocus={true}
                          show={false}
                        />
                      </Modal>
                    </a>
                  </Confirm>
                </ActionLink>
                <ActionLink
                  className="tip"
                  confirmLabel="Resolve"
                  disabled={false}
                  message="Are you sure???"
                  onAction={[Function]}
                  shouldConfirm={true}
                  title="Set up release tracking in order to use this feature."
                >
                  <Confirm
                    cancelText="Cancel"
                    confirmText="Resolve"
                    message="Are you sure???"
                    onConfirm={[Function]}
                    priority="primary"
                  >
                    <a
                      className="tip"
                      onClick={[Function]}
                      title="Set up release tracking in order to use this feature."
                    >
                       
                      The current release
                      <Modal
                        animation={false}
                        autoFocus={true}
                        backdrop={true}
                        bsClass="modal"
                        dialogComponentClass={[Function]}
                        enforceFocus={true}
                        keyboard={true}
                        manager={
                          ModalManager {
                            "containers": Array [],
                            "data": Array [],
                            "handleContainerOverflow": true,
                            "hideSiblingNodes": true,
                            "modals": Array [],
                          }
                        }
                        onHide={[Function]}
                        renderBackdrop={[Function]}
                        restoreFocus={true}
                        show={false}
                      >
                        <Modal
                          autoFocus={true}
                          backdrop={true}
                          backdropClassName="modal-backdrop"
                          backdropTransitionTimeout={150}
                          containerClassName="modal-open"
                          dialogTransitionTimeout={300}
                          enforceFocus={true}
                          keyboard={true}
                          manager={
                            ModalManager {
                              "containers": Array [],
                              "data": Array [],
                              "handleContainerOverflow": true,
                              "hideSiblingNodes": true,
                              "modals": Array [],
                            }
                          }
                          onEntering={[Function]}
                          onExited={[Function]}
                          onHide={[Function]}
                          renderBackdrop={[Function]}
                          restoreFocus={true}
                          show={false}
                        />
                      </Modal>
                    </a>
                  </Confirm>
                </ActionLink>
                <ActionLink
                  className="tip"
                  confirmLabel="Resolve"
                  disabled={false}
                  message="Are you sure???"
                  onAction={[Function]}
                  shouldConfirm={false}
                  title="Set up release tracking in order to use this feature."
                >
                  <a
                    className="tip"
                    disabled={false}
                    onClick={[Function]}
                  >
                    Another version ...
                  </a>
                </ActionLink>
              </li>
            </MenuItem>
          </ul>
        </span>
      </DropdownLink>
    </div>
  </div>
</ResolveActions>
`;

exports[`ResolveActions without confirmation renders 1`] = `
<ResolveActions
  confirmLabel="Resolve"
  hasRelease={false}
  isAutoResolved={false}
  isResolved={false}
  onUpdate={[Function]}
  orgId="org-1"
  projectId="proj-1"
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <customResolutionModal
      onCanceled={[Function]}
      onSelected={[Function]}
      orgId="org-1"
      projectId="proj-1"
      show={false}
    >
      <Modal
        animation={false}
        autoFocus={true}
        backdrop={true}
        bsClass="modal"
        dialogComponentClass={[Function]}
        enforceFocus={true}
        keyboard={true}
        manager={
          ModalManager {
            "containers": Array [],
            "data": Array [],
            "handleContainerOverflow": true,
            "hideSiblingNodes": true,
            "modals": Array [],
          }
        }
        onHide={[Function]}
        renderBackdrop={[Function]}
        restoreFocus={true}
        show={false}
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropClassName="modal-backdrop"
          backdropTransitionTimeout={150}
          containerClassName="modal-open"
          dialogTransitionTimeout={300}
          enforceFocus={true}
          keyboard={true}
          manager={
            ModalManager {
              "containers": Array [],
              "data": Array [],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "modals": Array [],
            }
          }
          onEntering={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          renderBackdrop={[Function]}
          restoreFocus={true}
          show={false}
        />
      </Modal>
    </customResolutionModal>
    <div
      className="btn-group"
    >
      <ActionLink
        className="btn btn-default btn-sm"
        confirmLabel="Resolve"
        disabled={false}
        onAction={[Function]}
        shouldConfirm={false}
        title="Resolve"
      >
        <a
          className="btn btn-default btn-sm"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="icon-checkmark"
            style={
              Object {
                "marginRight": 5,
              }
            }
          />
          Resolve
        </a>
      </ActionLink>
      <DropdownLink
        alwaysRenderMenu={true}
        anchorRight={false}
        caret={true}
        className="btn btn-default btn-sm"
        disabled={false}
        keepMenuOpen={false}
        title=""
      >
        <span
          className="dropdown"
        >
          <a
            className="dropdown-actor btn btn-default btn-sm dropdown-toggle"
            onClick={[Function]}
          >
            <span
              className="dropdown-actor-title"
            >
              <span />
              <i
                className="icon-arrow-down"
              />
            </span>
          </a>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <MenuItem
              header={true}
            >
              <li
                className="dropdown-header"
                href={null}
                role="presentation"
                title={null}
              >
                Resolved In
              </li>
            </MenuItem>
            <MenuItem
              noAnchor={true}
            >
              <li
                className=""
                href={null}
                role="presentation"
                title={null}
              >
                <ActionLink
                  className="tip"
                  confirmLabel="Resolve"
                  disabled={false}
                  onAction={[Function]}
                  shouldConfirm={false}
                  title="Set up release tracking in order to use this feature."
                >
                  <a
                    className="tip"
                    disabled={false}
                    onClick={[Function]}
                  >
                    The next release
                  </a>
                </ActionLink>
                <ActionLink
                  className="tip"
                  confirmLabel="Resolve"
                  disabled={false}
                  onAction={[Function]}
                  shouldConfirm={false}
                  title="Set up release tracking in order to use this feature."
                >
                  <a
                    className="tip"
                    disabled={false}
                    onClick={[Function]}
                  >
                    The current release
                  </a>
                </ActionLink>
                <ActionLink
                  className="tip"
                  confirmLabel="Resolve"
                  disabled={false}
                  onAction={[Function]}
                  shouldConfirm={false}
                  title="Set up release tracking in order to use this feature."
                >
                  <a
                    className="tip"
                    disabled={false}
                    onClick={[Function]}
                  >
                    Another version ...
                  </a>
                </ActionLink>
              </li>
            </MenuItem>
          </ul>
        </span>
      </DropdownLink>
    </div>
  </div>
</ResolveActions>
`;
